tests/AbstractTests/invalid_div_by_zero_double.avm.expected
Return: 84
Error: [1;31mline 3:[1;33m Division by zero
