tests/AbstractTests/invalid_div_by_zero_double.avm
push double(1.0)
push double(0.0)
div
exit
